# LLM-REPORT-GEN

./: .gitignore  README.md  SUPABASE-DIAGNOSTICS.md  package-lock.json  package.json  start.sh
backend/: create_tables.py  crew_agents.py  main.py  orchestrator.py  pyproject.toml  rate_limiter.py  requirements.txt  supabase_diagnostics.py  test.txt  test_admin_db.py  test_crew_agents.py  test_db.py  test_env.py  test_insert_data.py  test_large.csv
backend/schemas/: api_schemas.py
backend/services/: __init__.py  analysis_service.py  csv_parser_service.py  database_service.py  document_processor_service.py  upload_service.py
backend/static/: script.js  style.css
backend/templates/: index.html
backend/tests/: conftest.py  locustfile.py  logging_config.py  test_config.py  test_data_generator.py  test_logging.py
backend/tests/data/: sample1.txt  test_cases.json
backend/utils/: __init__.py  admin_db_utils.py  crewai_llm_adapter.py  db_utils.py  logging_utils.py  safe_pandas.py  sandbox_utils.py  transaction_utils.py  validation_utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  Visualization.js  Visualization.test.js  setupTests.js
public/: index.html
src/: App.js
