[project]
name = "document-query-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Sreeramyashasvi V",email = "sreeramyashasvi.v@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "crewai (==0.5.0)",
    "fastapi (==0.110.0)",
    "uvicorn (==0.27.1)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (==0.0.6)",
    "restrictedpython (==8.0)",
    "pandas (==2.2.0)",
    "langtrace-python-sdk (>=3.8.17,<4.0.0)",
    "pytest (==8.2.0)",
    "pytest-asyncio (==0.26.0)",
    "aiofiles (==23.2.1)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "nltk (==3.9.1)",
    "datasets (>=3.6.0,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "python-dotenv (==1.0.0)",
    "requests (==2.32.2)",
    "openpyxl (==3.1.2)",
    "psutil (==5.9.8)",
    "asyncpg (==0.29.0)",
    "supabase (==2.15.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
